// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`selectExports renders appropriately when the user has no products 1`] = `
<DocumentFragment>
  <div
    class="govuk-phase-banner app-phase-banner app-width-container"
  >
    <p
      class="govuk-phase-banner__content"
    >
      <strong
        class="govuk-tag govuk-phase-banner__content__tag"
      >
        Beta
      </strong>
      <span
        class="govuk-phase-banner__text"
      >
        This is a new service. Help us improve it and 
        <a
          class="govuk-link"
          href="/feedback"
          id="feedback-link"
        >
          give your feedback (opens in new tab)
        </a>
        .
      </span>
    </p>
  </div>
  <div
    class="govuk-width-container"
  >
    <main
      class="govuk-main-wrapper"
      id="main-content"
    >
      <a
        class="govuk-back-link"
        href="/products/exports"
      >
        Back
      </a>
      <form
        action="/api/selectExports?_csrf="
        method="post"
      >
        <div
          class="govuk-grid-row"
        >
          <div
            class="govuk-grid-column-full"
          >
            <div
              class="dft-flex dft-flex-justify-space-between"
            >
              <h1
                class="govuk-heading-xl"
              >
                Export your selected products
              </h1>
               
              <div
                class="align-middle"
              >
                <button
                  class="govuk-button govuk-visually-hidden"
                  type="submit"
                >
                  Export selected products
                </button>
              </div>
            </div>
            <div
              class="govuk-grid-row"
            >
              <div
                class="dft-flex dft-flex-justify-space-between"
              >
                <div
                  class="govuk-grid-column-two-thirds"
                >
                  <p
                    class="govuk-body-m govuk-!-margin-bottom-5"
                  >
                    This page will export all of the products you select. Incomplete products, expired products, or products for expired services will not be included in the list below.
                  </p>
                </div>
                <button
                  class="govuk-button govuk-button--secondary govuk-visually-hidden"
                  data-module="govuk-button"
                  id="select-all"
                >
                  Unselect all
                </button>
              </div>
            </div>
            <p
              class="govuk-body-m govuk-!-margin-top-5"
            >
              <em>
                You currently have no products that can be exported.
              </em>
            </p>
          </div>
        </div>
      </form>
    </main>
    <div>
      <h2
        class="govuk-heading-s"
      >
        Help and Support
      </h2>
      <p
        class="govuk-body"
      >
        If you are having problems, please contact the Create Fares Data Service via this link: 
        <a
          class="govuk-link govuk-!-font-size-19"
          href="/contact"
        >
          Contact us
        </a>
      </p>
    </div>
  </div>
  <footer
    class="govuk-footer"
    role="contentinfo"
  >
    <div
      class="govuk-width-container"
    >
      <svg
        class="govuk-footer__crown"
        fill="currentcolor"
        focusable="false"
        height="30"
        role="presentation"
        viewBox="0 0 64 60"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g>
          <circle
            cx="20"
            cy="17.6"
            r="3.7"
          />
          <circle
            cx="10.2"
            cy="23.5"
            r="3.7"
          />
          <circle
            cx="3.7"
            cy="33.2"
            r="3.7"
          />
          <circle
            cx="31.7"
            cy="30.6"
            r="3.7"
          />
          <circle
            cx="43.3"
            cy="17.6"
            r="3.7"
          />
          <circle
            cx="53.2"
            cy="23.5"
            r="3.7"
          />
          <circle
            cx="59.7"
            cy="33.2"
            r="3.7"
          />
          <circle
            cx="31.7"
            cy="30.6"
            r="3.7"
          />
          <path
            d="M33.1,9.8c.2-.1.3-.3.5-.5l4.6,2.4v-6.8l-4.6,1.5c-.1-.2-.3-.3-.5-.5l1.9-5.9h-6.7l1.9,5.9c-.2.1-.3.3-.5.5l-4.6-1.5v6.8l4.6-2.4c.1.2.3.3.5.5l-2.6,8c-.9,2.8,1.2,5.7,4.1,5.7h0c3,0,5.1-2.9,4.1-5.7l-2.6-8ZM37,37.9s-3.4,3.8-4.1,6.1c2.2,0,4.2-.5,6.4-2.8l-.7,8.5c-2-2.8-4.4-4.1-5.7-3.8.1,3.1.5,6.7,5.8,7.2,3.7.3,6.7-1.5,7-3.8.4-2.6-2-4.3-3.7-1.6-1.4-4.5,2.4-6.1,4.9-3.2-1.9-4.5-1.8-7.7,2.4-10.9,3,4,2.6,7.3-1.2,11.1,2.4-1.3,6.2,0,4,4.6-1.2-2.8-3.7-2.2-4.2.2-.3,1.7.7,3.7,3,4.2,1.9.3,4.7-.9,7-5.9-1.3,0-2.4.7-3.9,1.7l2.4-8c.6,2.3,1.4,3.7,2.2,4.5.6-1.6.5-2.8,0-5.3l5,1.8c-2.6,3.6-5.2,8.7-7.3,17.5-7.4-1.1-15.7-1.7-24.5-1.7h0c-8.8,0-17.1.6-24.5,1.7-2.1-8.9-4.7-13.9-7.3-17.5l5-1.8c-.5,2.5-.6,3.7,0,5.3.8-.8,1.6-2.3,2.2-4.5l2.4,8c-1.5-1-2.6-1.7-3.9-1.7,2.3,5,5.2,6.2,7,5.9,2.3-.4,3.3-2.4,3-4.2-.5-2.4-3-3.1-4.2-.2-2.2-4.6,1.6-6,4-4.6-3.7-3.7-4.2-7.1-1.2-11.1,4.2,3.2,4.3,6.4,2.4,10.9,2.5-2.8,6.3-1.3,4.9,3.2-1.8-2.7-4.1-1-3.7,1.6.3,2.3,3.3,4.1,7,3.8,5.4-.5,5.7-4.2,5.8-7.2-1.3-.2-3.7,1-5.7,3.8l-.7-8.5c2.2,2.3,4.2,2.7,6.4,2.8-.7-2.3-4.1-6.1-4.1-6.1h10.6,0Z"
          />
        </g>
      </svg>
      <div
        class="govuk-footer__meta"
      >
        <div
          class="govuk-footer__meta-item govuk-footer__meta-item--grow"
        >
          <h2
            class="govuk-visually-hidden"
          >
            Support links
          </h2>
          <ul
            class="govuk-footer__inline-list"
          >
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/contact"
              >
                Help
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/cookies"
              >
                Cookies
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/contact"
              >
                Contact
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/accessibility"
              >
                Accessibility
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="https://www.gov.uk/help/terms-conditions"
              >
                Terms and conditions
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/privacy"
              >
                Privacy
              </a>
            </li>
          </ul>
          <p
            class="govuk-footer__body"
          >
            Built by the 
            <a
              class="govuk-footer__link"
              href="https://www.gov.uk/government/organisations/department-for-transport"
              rel="noreferrer"
              target="_blank"
            >
              Department for Transport
            </a>
          </p>
          <svg
            aria-hidden="true"
            class="govuk-footer__licence-logo"
            focusable="false"
            height="17"
            viewBox="0 0 483.2 195.7"
            width="41"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M421.5 142.8V.1l-50.7 32.3v161.1h112.4v-50.7zm-122.3-9.6A47.12 47.12 0 0 1 221 97.8c0-26 21.1-47.1 47.1-47.1 16.7 0 31.4 8.7 39.7 21.8l42.7-27.2A97.63 97.63 0 0 0 268.1 0c-36.5 0-68.3 20.1-85.1 49.7A98 98 0 0 0 97.8 0C43.9 0 0 43.9 0 97.8s43.9 97.8 97.8 97.8c36.5 0 68.3-20.1 85.1-49.7a97.76 97.76 0 0 0 149.6 25.4l19.4 22.2h3v-87.8h-80l24.3 27.5zM97.8 145c-26 0-47.1-21.1-47.1-47.1s21.1-47.1 47.1-47.1 47.2 21 47.2 47S123.8 145 97.8 145"
              fill="currentColor"
            />
          </svg>
          <span
            class="govuk-footer__licence-description"
          >
            All content is available under the 
            <a
              class="govuk-footer__link"
              href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/"
              rel="license"
            >
              Open Government Licence v3.0
            </a>
            , except where otherwise stated
          </span>
        </div>
        <div
          class="govuk-footer__meta-item"
        >
          <a
            class="govuk-footer__link govuk-footer__copyright-logo"
            href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/"
          >
            © Crown copyright
          </a>
        </div>
      </div>
    </div>
  </footer>
</DocumentFragment>
`;

exports[`selectExports renders fully when the user has products they can export and both types of products (point to point and non point to point) 1`] = `
<DocumentFragment>
  <div
    class="govuk-phase-banner app-phase-banner app-width-container"
  >
    <p
      class="govuk-phase-banner__content"
    >
      <strong
        class="govuk-tag govuk-phase-banner__content__tag"
      >
        Beta
      </strong>
      <span
        class="govuk-phase-banner__text"
      >
        This is a new service. Help us improve it and 
        <a
          class="govuk-link"
          href="/feedback"
          id="feedback-link"
        >
          give your feedback (opens in new tab)
        </a>
        .
      </span>
    </p>
  </div>
  <div
    class="govuk-width-container"
  >
    <main
      class="govuk-main-wrapper"
      id="main-content"
    >
      <a
        class="govuk-back-link"
        href="/products/exports"
      >
        Back
      </a>
      <form
        action="/api/selectExports?_csrf="
        method="post"
      >
        <div
          class="govuk-grid-row"
        >
          <div
            class="govuk-grid-column-full"
          >
            <div
              class="dft-flex dft-flex-justify-space-between"
            >
              <h1
                class="govuk-heading-xl"
              >
                Export your selected products
              </h1>
               
              <div
                class="align-middle"
              >
                <button
                  class="govuk-button"
                  type="submit"
                >
                  Export selected products
                </button>
              </div>
            </div>
            <div
              class="govuk-grid-row"
            >
              <div
                class="dft-flex dft-flex-justify-space-between"
              >
                <div
                  class="govuk-grid-column-two-thirds"
                >
                  <p
                    class="govuk-body-m govuk-!-margin-bottom-5"
                  >
                    This page will export all of the products you select. Incomplete products, expired products, or products for expired services will not be included in the list below.
                  </p>
                </div>
                <button
                  class="govuk-button govuk-button--secondary"
                  data-module="govuk-button"
                  id="select-all"
                >
                  Select all
                </button>
              </div>
            </div>
            <div>
              <strong
                class="govuk-tag govuk-tag--blue govuk-!-margin-bottom-4"
                id="products-selected"
              >
                0 / 6 selected
              </strong>
              <div
                class="govuk-tabs"
                data-module="govuk-tabs"
              >
                <h2
                  class="govuk-tabs__title"
                >
                  Products
                </h2>
                <ul
                  class="govuk-tabs__list"
                >
                  <li
                    class="govuk-tabs__list-item govuk-tabs__list-item--selected"
                  >
                    <a
                      class="govuk-tabs__tab"
                      href="#services"
                    >
                      Services
                    </a>
                  </li>
                  <li
                    class="govuk-tabs__list-item"
                  >
                    <a
                      class="govuk-tabs__tab"
                      href="#period-products"
                    >
                      Period products
                    </a>
                  </li>
                  <li
                    class="govuk-tabs__list-item"
                  >
                    <a
                      class="govuk-tabs__tab"
                      href="#flat-fare-products"
                    >
                      Flat fare products
                    </a>
                  </li>
                  <li
                    class="govuk-tabs__list-item"
                  >
                    <a
                      class="govuk-tabs__tab"
                      href="#multi-operator-products"
                    >
                      Multi-operator products
                    </a>
                  </li>
                  <li
                    class="govuk-tabs__list-item"
                  >
                    <a
                      class="govuk-tabs__tab"
                      href="#school-service-products"
                    >
                      Academic products
                    </a>
                  </li>
                </ul>
                <div
                  class="govuk-tabs__panel"
                  id="services"
                >
                  <h2
                    class="govuk-heading-m govuk-!-margin-bottom-6"
                  >
                    Services
                  </h2>
                  <button
                    class="govuk-button govuk-button--secondary"
                    data-module="govuk-button"
                    id="open-all-services"
                  >
                    Open all
                  </button>
                  <details
                    class="govuk-details margin-bottom-export"
                    data-module="govuk-details"
                  >
                    <summary
                      class="govuk-details__summary"
                    >
                      <span
                        class="govuk-details__summary-text"
                      >
                        2a - Town to Football Stadium
                      </span>
                    </summary>
                    <div
                      class="govuk-checkboxes__item govuk-checkboxes--small govuk-!-margin-top-2 govuk-!-margin-left-4"
                    >
                      <input
                        class="govuk-checkboxes__input"
                        id="checkbox-1"
                        name="productsToExport"
                        type="checkbox"
                        value="4"
                      />
                      <label
                        class="govuk-label govuk-checkboxes__label"
                        for="checkbox-1"
                        id="product-1"
                        role="input"
                      >
                        Adult single | Outbound | 01/02/2022
                      </label>
                    </div>
                  </details>
                  <details
                    class="govuk-details margin-bottom-export"
                    data-module="govuk-details"
                  >
                    <summary
                      class="govuk-details__summary"
                    >
                      <span
                        class="govuk-details__summary-text"
                      >
                        44 - College to Shops
                      </span>
                    </summary>
                    <div
                      class="govuk-checkboxes__item govuk-checkboxes--small govuk-!-margin-top-2 govuk-!-margin-left-4"
                    >
                      <input
                        class="govuk-checkboxes__input"
                        id="checkbox-2"
                        name="productsToExport"
                        type="checkbox"
                        value="5"
                      />
                      <label
                        class="govuk-label govuk-checkboxes__label"
                        for="checkbox-2"
                        id="product-2"
                        role="input"
                      >
                        Student return | Inbound | 02/02/2022
                      </label>
                    </div>
                  </details>
                  <details
                    class="govuk-details margin-bottom-export"
                    data-module="govuk-details"
                  >
                    <summary
                      class="govuk-details__summary"
                    >
                      <span
                        class="govuk-details__summary-text"
                      >
                        11b - Leeds to Bradford
                      </span>
                    </summary>
                    <div
                      class="govuk-checkboxes__item govuk-checkboxes--small govuk-!-margin-top-2 govuk-!-margin-left-4"
                    >
                      <input
                        class="govuk-checkboxes__input"
                        id="checkbox-3"
                        name="productsToExport"
                        type="checkbox"
                        value="6"
                      />
                      <label
                        class="govuk-label govuk-checkboxes__label"
                        for="checkbox-3"
                        id="product-3"
                        role="input"
                      >
                        Saver ticket | Inbound | 02/02/2022
                      </label>
                    </div>
                  </details>
                </div>
                <div
                  class="govuk-tabs__panel govuk-tabs__panel--hidden"
                  id="period-products"
                >
                  <div>
                    <h2
                      class="govuk-heading-m govuk-!-margin-bottom-6"
                    >
                      Period products
                    </h2>
                    <div
                      class="govuk-checkboxes__item govuk-checkboxes--small govuk-!-margin-top-2 govuk-!-margin-left-4"
                    >
                      <input
                        class="govuk-checkboxes__input"
                        id="checkbox-4"
                        name="productsToExport"
                        type="checkbox"
                        value="1"
                      />
                      <label
                        class="govuk-label govuk-checkboxes__label"
                        for="checkbox-4"
                        id="product-4"
                        role="input"
                      >
                        Best product | 01/02/2022
                      </label>
                    </div>
                  </div>
                </div>
                <div
                  class="govuk-tabs__panel govuk-tabs__panel--hidden"
                  id="flat-fare-products"
                >
                  <div>
                    <h2
                      class="govuk-heading-m govuk-!-margin-bottom-6"
                    >
                      Flat fare products
                    </h2>
                    <div
                      class="govuk-checkboxes__item govuk-checkboxes--small govuk-!-margin-top-2 govuk-!-margin-left-4"
                    >
                      <input
                        class="govuk-checkboxes__input"
                        id="checkbox-5"
                        name="productsToExport"
                        type="checkbox"
                        value="2"
                      />
                      <label
                        class="govuk-label govuk-checkboxes__label"
                        for="checkbox-5"
                        id="product-5"
                        role="input"
                      >
                        Super product | 02/02/2022
                      </label>
                    </div>
                  </div>
                </div>
                <div
                  class="govuk-tabs__panel govuk-tabs__panel--hidden"
                  id="multi-operator-products"
                >
                  <div>
                    <h2
                      class="govuk-heading-m govuk-!-margin-bottom-6"
                    >
                      Multi-operator (internal) products
                    </h2>
                    <div
                      class="govuk-checkboxes__item govuk-checkboxes--small govuk-!-margin-top-2 govuk-!-margin-left-4"
                    >
                      <input
                        class="govuk-checkboxes__input"
                        id="checkbox-6"
                        name="productsToExport"
                        type="checkbox"
                        value="3"
                      />
                      <label
                        class="govuk-label govuk-checkboxes__label"
                        for="checkbox-6"
                        id="product-6"
                        role="input"
                      >
                        Super product | 02/02/2022
                      </label>
                    </div>
                  </div>
                </div>
                <div
                  class="govuk-tabs__panel govuk-tabs__panel--hidden"
                  id="school-service-products"
                >
                  <div>
                    <h2
                      class="govuk-heading-m govuk-!-margin-bottom-6"
                    >
                      Academic term/year products
                    </h2>
                    <p
                      class="govuk-body-m govuk-!-margin-top-5"
                    >
                      <em>
                        You currently have no academic term/year products that can be exported.
                      </em>
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </form>
    </main>
    <div>
      <h2
        class="govuk-heading-s"
      >
        Help and Support
      </h2>
      <p
        class="govuk-body"
      >
        If you are having problems, please contact the Create Fares Data Service via this link: 
        <a
          class="govuk-link govuk-!-font-size-19"
          href="/contact"
        >
          Contact us
        </a>
      </p>
    </div>
  </div>
  <footer
    class="govuk-footer"
    role="contentinfo"
  >
    <div
      class="govuk-width-container"
    >
      <svg
        class="govuk-footer__crown"
        fill="currentcolor"
        focusable="false"
        height="30"
        role="presentation"
        viewBox="0 0 64 60"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g>
          <circle
            cx="20"
            cy="17.6"
            r="3.7"
          />
          <circle
            cx="10.2"
            cy="23.5"
            r="3.7"
          />
          <circle
            cx="3.7"
            cy="33.2"
            r="3.7"
          />
          <circle
            cx="31.7"
            cy="30.6"
            r="3.7"
          />
          <circle
            cx="43.3"
            cy="17.6"
            r="3.7"
          />
          <circle
            cx="53.2"
            cy="23.5"
            r="3.7"
          />
          <circle
            cx="59.7"
            cy="33.2"
            r="3.7"
          />
          <circle
            cx="31.7"
            cy="30.6"
            r="3.7"
          />
          <path
            d="M33.1,9.8c.2-.1.3-.3.5-.5l4.6,2.4v-6.8l-4.6,1.5c-.1-.2-.3-.3-.5-.5l1.9-5.9h-6.7l1.9,5.9c-.2.1-.3.3-.5.5l-4.6-1.5v6.8l4.6-2.4c.1.2.3.3.5.5l-2.6,8c-.9,2.8,1.2,5.7,4.1,5.7h0c3,0,5.1-2.9,4.1-5.7l-2.6-8ZM37,37.9s-3.4,3.8-4.1,6.1c2.2,0,4.2-.5,6.4-2.8l-.7,8.5c-2-2.8-4.4-4.1-5.7-3.8.1,3.1.5,6.7,5.8,7.2,3.7.3,6.7-1.5,7-3.8.4-2.6-2-4.3-3.7-1.6-1.4-4.5,2.4-6.1,4.9-3.2-1.9-4.5-1.8-7.7,2.4-10.9,3,4,2.6,7.3-1.2,11.1,2.4-1.3,6.2,0,4,4.6-1.2-2.8-3.7-2.2-4.2.2-.3,1.7.7,3.7,3,4.2,1.9.3,4.7-.9,7-5.9-1.3,0-2.4.7-3.9,1.7l2.4-8c.6,2.3,1.4,3.7,2.2,4.5.6-1.6.5-2.8,0-5.3l5,1.8c-2.6,3.6-5.2,8.7-7.3,17.5-7.4-1.1-15.7-1.7-24.5-1.7h0c-8.8,0-17.1.6-24.5,1.7-2.1-8.9-4.7-13.9-7.3-17.5l5-1.8c-.5,2.5-.6,3.7,0,5.3.8-.8,1.6-2.3,2.2-4.5l2.4,8c-1.5-1-2.6-1.7-3.9-1.7,2.3,5,5.2,6.2,7,5.9,2.3-.4,3.3-2.4,3-4.2-.5-2.4-3-3.1-4.2-.2-2.2-4.6,1.6-6,4-4.6-3.7-3.7-4.2-7.1-1.2-11.1,4.2,3.2,4.3,6.4,2.4,10.9,2.5-2.8,6.3-1.3,4.9,3.2-1.8-2.7-4.1-1-3.7,1.6.3,2.3,3.3,4.1,7,3.8,5.4-.5,5.7-4.2,5.8-7.2-1.3-.2-3.7,1-5.7,3.8l-.7-8.5c2.2,2.3,4.2,2.7,6.4,2.8-.7-2.3-4.1-6.1-4.1-6.1h10.6,0Z"
          />
        </g>
      </svg>
      <div
        class="govuk-footer__meta"
      >
        <div
          class="govuk-footer__meta-item govuk-footer__meta-item--grow"
        >
          <h2
            class="govuk-visually-hidden"
          >
            Support links
          </h2>
          <ul
            class="govuk-footer__inline-list"
          >
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/contact"
              >
                Help
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/cookies"
              >
                Cookies
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/contact"
              >
                Contact
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/accessibility"
              >
                Accessibility
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="https://www.gov.uk/help/terms-conditions"
              >
                Terms and conditions
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/privacy"
              >
                Privacy
              </a>
            </li>
          </ul>
          <p
            class="govuk-footer__body"
          >
            Built by the 
            <a
              class="govuk-footer__link"
              href="https://www.gov.uk/government/organisations/department-for-transport"
              rel="noreferrer"
              target="_blank"
            >
              Department for Transport
            </a>
          </p>
          <svg
            aria-hidden="true"
            class="govuk-footer__licence-logo"
            focusable="false"
            height="17"
            viewBox="0 0 483.2 195.7"
            width="41"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M421.5 142.8V.1l-50.7 32.3v161.1h112.4v-50.7zm-122.3-9.6A47.12 47.12 0 0 1 221 97.8c0-26 21.1-47.1 47.1-47.1 16.7 0 31.4 8.7 39.7 21.8l42.7-27.2A97.63 97.63 0 0 0 268.1 0c-36.5 0-68.3 20.1-85.1 49.7A98 98 0 0 0 97.8 0C43.9 0 0 43.9 0 97.8s43.9 97.8 97.8 97.8c36.5 0 68.3-20.1 85.1-49.7a97.76 97.76 0 0 0 149.6 25.4l19.4 22.2h3v-87.8h-80l24.3 27.5zM97.8 145c-26 0-47.1-21.1-47.1-47.1s21.1-47.1 47.1-47.1 47.2 21 47.2 47S123.8 145 97.8 145"
              fill="currentColor"
            />
          </svg>
          <span
            class="govuk-footer__licence-description"
          >
            All content is available under the 
            <a
              class="govuk-footer__link"
              href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/"
              rel="license"
            >
              Open Government Licence v3.0
            </a>
            , except where otherwise stated
          </span>
        </div>
        <div
          class="govuk-footer__meta-item"
        >
          <a
            class="govuk-footer__link govuk-footer__copyright-logo"
            href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/"
          >
            © Crown copyright
          </a>
        </div>
      </div>
    </div>
  </footer>
</DocumentFragment>
`;

exports[`selectExports renders fully when the user has products they can export, but no point to point products 1`] = `
<DocumentFragment>
  <div
    class="govuk-phase-banner app-phase-banner app-width-container"
  >
    <p
      class="govuk-phase-banner__content"
    >
      <strong
        class="govuk-tag govuk-phase-banner__content__tag"
      >
        Beta
      </strong>
      <span
        class="govuk-phase-banner__text"
      >
        This is a new service. Help us improve it and 
        <a
          class="govuk-link"
          href="/feedback"
          id="feedback-link"
        >
          give your feedback (opens in new tab)
        </a>
        .
      </span>
    </p>
  </div>
  <div
    class="govuk-width-container"
  >
    <main
      class="govuk-main-wrapper"
      id="main-content"
    >
      <a
        class="govuk-back-link"
        href="/products/exports"
      >
        Back
      </a>
      <form
        action="/api/selectExports?_csrf="
        method="post"
      >
        <div
          class="govuk-grid-row"
        >
          <div
            class="govuk-grid-column-full"
          >
            <div
              class="dft-flex dft-flex-justify-space-between"
            >
              <h1
                class="govuk-heading-xl"
              >
                Export your selected products
              </h1>
               
              <div
                class="align-middle"
              >
                <button
                  class="govuk-button"
                  type="submit"
                >
                  Export selected products
                </button>
              </div>
            </div>
            <div
              class="govuk-grid-row"
            >
              <div
                class="dft-flex dft-flex-justify-space-between"
              >
                <div
                  class="govuk-grid-column-two-thirds"
                >
                  <p
                    class="govuk-body-m govuk-!-margin-bottom-5"
                  >
                    This page will export all of the products you select. Incomplete products, expired products, or products for expired services will not be included in the list below.
                  </p>
                </div>
                <button
                  class="govuk-button govuk-button--secondary"
                  data-module="govuk-button"
                  id="select-all"
                >
                  Select all
                </button>
              </div>
            </div>
            <div>
              <strong
                class="govuk-tag govuk-tag--blue govuk-!-margin-bottom-4"
                id="products-selected"
              >
                0 / 3 selected
              </strong>
              <div
                class="govuk-tabs"
                data-module="govuk-tabs"
              >
                <h2
                  class="govuk-tabs__title"
                >
                  Products
                </h2>
                <ul
                  class="govuk-tabs__list"
                >
                  <li
                    class="govuk-tabs__list-item govuk-tabs__list-item--selected"
                  >
                    <a
                      class="govuk-tabs__tab"
                      href="#services"
                    >
                      Services
                    </a>
                  </li>
                  <li
                    class="govuk-tabs__list-item"
                  >
                    <a
                      class="govuk-tabs__tab"
                      href="#period-products"
                    >
                      Period products
                    </a>
                  </li>
                  <li
                    class="govuk-tabs__list-item"
                  >
                    <a
                      class="govuk-tabs__tab"
                      href="#flat-fare-products"
                    >
                      Flat fare products
                    </a>
                  </li>
                  <li
                    class="govuk-tabs__list-item"
                  >
                    <a
                      class="govuk-tabs__tab"
                      href="#multi-operator-products"
                    >
                      Multi-operator products
                    </a>
                  </li>
                  <li
                    class="govuk-tabs__list-item"
                  >
                    <a
                      class="govuk-tabs__tab"
                      href="#school-service-products"
                    >
                      Academic products
                    </a>
                  </li>
                </ul>
                <div
                  class="govuk-tabs__panel"
                  id="services"
                >
                  <h2
                    class="govuk-heading-m govuk-!-margin-bottom-6"
                  >
                    Services
                  </h2>
                  <p
                    class="govuk-body-m govuk-!-margin-top-5"
                  >
                    <em>
                      You currently have no single or return products that can be exported.
                    </em>
                  </p>
                </div>
                <div
                  class="govuk-tabs__panel govuk-tabs__panel--hidden"
                  id="period-products"
                >
                  <div>
                    <h2
                      class="govuk-heading-m govuk-!-margin-bottom-6"
                    >
                      Period products
                    </h2>
                    <div
                      class="govuk-checkboxes__item govuk-checkboxes--small govuk-!-margin-top-2 govuk-!-margin-left-4"
                    >
                      <input
                        class="govuk-checkboxes__input"
                        id="checkbox-1"
                        name="productsToExport"
                        type="checkbox"
                        value="1"
                      />
                      <label
                        class="govuk-label govuk-checkboxes__label"
                        for="checkbox-1"
                        id="product-1"
                        role="input"
                      >
                        Best product | 01/02/2022
                      </label>
                    </div>
                  </div>
                </div>
                <div
                  class="govuk-tabs__panel govuk-tabs__panel--hidden"
                  id="flat-fare-products"
                >
                  <div>
                    <h2
                      class="govuk-heading-m govuk-!-margin-bottom-6"
                    >
                      Flat fare products
                    </h2>
                    <div
                      class="govuk-checkboxes__item govuk-checkboxes--small govuk-!-margin-top-2 govuk-!-margin-left-4"
                    >
                      <input
                        class="govuk-checkboxes__input"
                        id="checkbox-2"
                        name="productsToExport"
                        type="checkbox"
                        value="2"
                      />
                      <label
                        class="govuk-label govuk-checkboxes__label"
                        for="checkbox-2"
                        id="product-2"
                        role="input"
                      >
                        Super product | 02/02/2022
                      </label>
                    </div>
                  </div>
                </div>
                <div
                  class="govuk-tabs__panel govuk-tabs__panel--hidden"
                  id="multi-operator-products"
                >
                  <div>
                    <h2
                      class="govuk-heading-m govuk-!-margin-bottom-6"
                    >
                      Multi-operator (internal) products
                    </h2>
                    <div
                      class="govuk-checkboxes__item govuk-checkboxes--small govuk-!-margin-top-2 govuk-!-margin-left-4"
                    >
                      <input
                        class="govuk-checkboxes__input"
                        id="checkbox-3"
                        name="productsToExport"
                        type="checkbox"
                        value="3"
                      />
                      <label
                        class="govuk-label govuk-checkboxes__label"
                        for="checkbox-3"
                        id="product-3"
                        role="input"
                      >
                        Super product | 02/02/2022
                      </label>
                    </div>
                  </div>
                </div>
                <div
                  class="govuk-tabs__panel govuk-tabs__panel--hidden"
                  id="school-service-products"
                >
                  <div>
                    <h2
                      class="govuk-heading-m govuk-!-margin-bottom-6"
                    >
                      Academic term/year products
                    </h2>
                    <p
                      class="govuk-body-m govuk-!-margin-top-5"
                    >
                      <em>
                        You currently have no academic term/year products that can be exported.
                      </em>
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </form>
    </main>
    <div>
      <h2
        class="govuk-heading-s"
      >
        Help and Support
      </h2>
      <p
        class="govuk-body"
      >
        If you are having problems, please contact the Create Fares Data Service via this link: 
        <a
          class="govuk-link govuk-!-font-size-19"
          href="/contact"
        >
          Contact us
        </a>
      </p>
    </div>
  </div>
  <footer
    class="govuk-footer"
    role="contentinfo"
  >
    <div
      class="govuk-width-container"
    >
      <svg
        class="govuk-footer__crown"
        fill="currentcolor"
        focusable="false"
        height="30"
        role="presentation"
        viewBox="0 0 64 60"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g>
          <circle
            cx="20"
            cy="17.6"
            r="3.7"
          />
          <circle
            cx="10.2"
            cy="23.5"
            r="3.7"
          />
          <circle
            cx="3.7"
            cy="33.2"
            r="3.7"
          />
          <circle
            cx="31.7"
            cy="30.6"
            r="3.7"
          />
          <circle
            cx="43.3"
            cy="17.6"
            r="3.7"
          />
          <circle
            cx="53.2"
            cy="23.5"
            r="3.7"
          />
          <circle
            cx="59.7"
            cy="33.2"
            r="3.7"
          />
          <circle
            cx="31.7"
            cy="30.6"
            r="3.7"
          />
          <path
            d="M33.1,9.8c.2-.1.3-.3.5-.5l4.6,2.4v-6.8l-4.6,1.5c-.1-.2-.3-.3-.5-.5l1.9-5.9h-6.7l1.9,5.9c-.2.1-.3.3-.5.5l-4.6-1.5v6.8l4.6-2.4c.1.2.3.3.5.5l-2.6,8c-.9,2.8,1.2,5.7,4.1,5.7h0c3,0,5.1-2.9,4.1-5.7l-2.6-8ZM37,37.9s-3.4,3.8-4.1,6.1c2.2,0,4.2-.5,6.4-2.8l-.7,8.5c-2-2.8-4.4-4.1-5.7-3.8.1,3.1.5,6.7,5.8,7.2,3.7.3,6.7-1.5,7-3.8.4-2.6-2-4.3-3.7-1.6-1.4-4.5,2.4-6.1,4.9-3.2-1.9-4.5-1.8-7.7,2.4-10.9,3,4,2.6,7.3-1.2,11.1,2.4-1.3,6.2,0,4,4.6-1.2-2.8-3.7-2.2-4.2.2-.3,1.7.7,3.7,3,4.2,1.9.3,4.7-.9,7-5.9-1.3,0-2.4.7-3.9,1.7l2.4-8c.6,2.3,1.4,3.7,2.2,4.5.6-1.6.5-2.8,0-5.3l5,1.8c-2.6,3.6-5.2,8.7-7.3,17.5-7.4-1.1-15.7-1.7-24.5-1.7h0c-8.8,0-17.1.6-24.5,1.7-2.1-8.9-4.7-13.9-7.3-17.5l5-1.8c-.5,2.5-.6,3.7,0,5.3.8-.8,1.6-2.3,2.2-4.5l2.4,8c-1.5-1-2.6-1.7-3.9-1.7,2.3,5,5.2,6.2,7,5.9,2.3-.4,3.3-2.4,3-4.2-.5-2.4-3-3.1-4.2-.2-2.2-4.6,1.6-6,4-4.6-3.7-3.7-4.2-7.1-1.2-11.1,4.2,3.2,4.3,6.4,2.4,10.9,2.5-2.8,6.3-1.3,4.9,3.2-1.8-2.7-4.1-1-3.7,1.6.3,2.3,3.3,4.1,7,3.8,5.4-.5,5.7-4.2,5.8-7.2-1.3-.2-3.7,1-5.7,3.8l-.7-8.5c2.2,2.3,4.2,2.7,6.4,2.8-.7-2.3-4.1-6.1-4.1-6.1h10.6,0Z"
          />
        </g>
      </svg>
      <div
        class="govuk-footer__meta"
      >
        <div
          class="govuk-footer__meta-item govuk-footer__meta-item--grow"
        >
          <h2
            class="govuk-visually-hidden"
          >
            Support links
          </h2>
          <ul
            class="govuk-footer__inline-list"
          >
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/contact"
              >
                Help
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/cookies"
              >
                Cookies
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/contact"
              >
                Contact
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/accessibility"
              >
                Accessibility
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="https://www.gov.uk/help/terms-conditions"
              >
                Terms and conditions
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/privacy"
              >
                Privacy
              </a>
            </li>
          </ul>
          <p
            class="govuk-footer__body"
          >
            Built by the 
            <a
              class="govuk-footer__link"
              href="https://www.gov.uk/government/organisations/department-for-transport"
              rel="noreferrer"
              target="_blank"
            >
              Department for Transport
            </a>
          </p>
          <svg
            aria-hidden="true"
            class="govuk-footer__licence-logo"
            focusable="false"
            height="17"
            viewBox="0 0 483.2 195.7"
            width="41"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M421.5 142.8V.1l-50.7 32.3v161.1h112.4v-50.7zm-122.3-9.6A47.12 47.12 0 0 1 221 97.8c0-26 21.1-47.1 47.1-47.1 16.7 0 31.4 8.7 39.7 21.8l42.7-27.2A97.63 97.63 0 0 0 268.1 0c-36.5 0-68.3 20.1-85.1 49.7A98 98 0 0 0 97.8 0C43.9 0 0 43.9 0 97.8s43.9 97.8 97.8 97.8c36.5 0 68.3-20.1 85.1-49.7a97.76 97.76 0 0 0 149.6 25.4l19.4 22.2h3v-87.8h-80l24.3 27.5zM97.8 145c-26 0-47.1-21.1-47.1-47.1s21.1-47.1 47.1-47.1 47.2 21 47.2 47S123.8 145 97.8 145"
              fill="currentColor"
            />
          </svg>
          <span
            class="govuk-footer__licence-description"
          >
            All content is available under the 
            <a
              class="govuk-footer__link"
              href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/"
              rel="license"
            >
              Open Government Licence v3.0
            </a>
            , except where otherwise stated
          </span>
        </div>
        <div
          class="govuk-footer__meta-item"
        >
          <a
            class="govuk-footer__link govuk-footer__copyright-logo"
            href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/"
          >
            © Crown copyright
          </a>
        </div>
      </div>
    </div>
  </footer>
</DocumentFragment>
`;
